# overview-plugin

./: .gitignore  Makefile  Makefile.am  README.md  TODO  autogen.sh  configure.ac  geanyscihunting.patch  gp-update.sh  overviewcolor.c  overviewcolor.h  overviewplugin.c  overviewplugin.h  overviewprefs.c  overviewprefs.h  overviewprefspanel.c  overviewprefspanel.h  overviewscintilla.c  overviewscintilla.h  prefs.glade  prefs.ui
data/: Makefile.am  prefs.ui
geany-plugins/overview/: wscript_configure
geany-plugins/overview/overview/: Makefile.am
overview/: Makefile.am  overviewcolor.c  overviewcolor.h  overviewplugin.c  overviewplugin.h  overviewprefs.c  overviewprefs.h  overviewprefspanel.c  overviewprefspanel.h  overviewscintilla.c  overviewscintilla.h  overviewui.c  overviewui.h
screenshots/: Makefile.am
