screenshotdir = $(docdir)/screenshots
screenshot_DATA = \
	$(top_srcdir)/screenshots/screenshot-dark.png \
	$(top_srcdir)/screenshots/screenshot-keybindings.png \
	$(top_srcdir)/screenshots/screenshot-light.png \
	$(top_srcdir)/screenshots/screenshot-prefs.png \
	$(top_srcdir)/screenshots/screenshot-view-menu.png
